js/js.translator/testData/incremental/invalidation/fakeOverrideInterfaceFunctionQualifiers/lib1/l1.5.kt
interface Module1Interface {
    public fun testFunction2() = 20
    public fun testFunction22() = 220

    public konst testField222: Int
        get() = 2220
}
